cmake_minimum_required(VERSION 2.8 FATAL_ERROR)
project(point_del)
find_package(PCL 1.2 REQUIRED)
include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})	
add_executable (point_del point_del.cpp)
target_link_libraries (point_del ${PCL_LIBRARIES})